--- a/.gitignore
+++ b/.gitignore
@@ -1,98 +1,41 @@
-# OS-generated files
 .DS_Store
 Thumbs.db
-
-# Node.js dependencies
 node_modules/
-
-# Build files
 dist/
 build/
-
-# Environment files
 .env*
-
-# Log files
 *.log
-
-# Temporary files
 *.tmp
-
-# Compiled binaries
 *.com
 *.class
 *.dll
 *.exe
 *.o
 *.so
-
-# Visual Studio Code settings
-.vscode/
-
-# JetBrains IDE settings
 .idea/
-
-# Compiled Java bytecode
 *.class
-
-# Compiled Python bytecode
-*.pyc
-
-# Compiled Java bytecode
-*.class
-
-# Compiled Ruby bytecode
-*.rbc
-
-# Compiled TypeScript
-*.tsbuildinfo
-
-# Compiled TypeScript
-*.tsbuildinfo
-
-# Parcel
 .cache/
 dist/
 parcel-bundler-cache/
-
-# Yarn
-yarn-error.log
-yarn.lock
-
-# macOS
-.AppleDouble
-.DS_Store
-.LSOverride
-
-# Thumbnails
 ._*
-
-# Sublime Text
-.sublime-project
-.sublime-workspace
-
-# SASS
-.sass-cache/
-
-# Log files
-*.log
-
-# Editor-specific files
 *~
 .idea
-.vscode
-
-# Build system files
-node_modules/
 package-lock.json
 npm-debug.log
 yarn-error.log
-
-# Webpack
-dist/
-node_modules/
-
-# Angular
-node_modules/
-dist/
-*.log
+Logs
+logs
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log*
+lerna-debug.log*
+node_modules
+dist
+dist-ssr
+*.local
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
+*.sw?
